--- a/java_solution/1二维数组中的查找.md
+++ b/java_solution/1二维数组中的查找.md
@@ -12,3 +12,28 @@
 
 给定 target = 3，返回 false。
 
+# 题解
+利用数组从上到下 从左到右递增的规律。选取右上角或者左下角的元素a[row][col]与target进行比较，
+当target小于元素a[row][col]时，那么target必定在元素a所在行的左边,
+即col--；
+当target大于元素a[row][col]时，那么target必定在元素a所在列的下边,
+即row++；
+```
+public class Solution {
+    public boolean Find(int target, int [][] array) {
+        if(array==null||array.length==0)
+            return false;
+        int row = 0;
+        int col = array[0].length-1;
+        while(row<=array.length-1&&col>=0){
+            if(target==array[row][col])
+                return true;
+            else if(target>array[row][col])
+                row++;
+            else
+                col--;
+        }
+        return false;
+    }
+}
+```
