--- a/java_solution/1二维数组中的查找.md
+++ b/java_solution/1二维数组中的查找.md
@@ -18,7 +18,7 @@
 即col--；
 当target大于元素a[row][col]时，那么target必定在元素a所在列的下边,
 即row++；
-```
+```java
 public class Solution {
     public boolean Find(int target, int [][] array) {
         if(array==null||array.length==0)
