--- a/java_solution/4重建二叉树.md
+++ b/java_solution/4重建二叉树.md
@@ -1,1 +1,48 @@
+# 题目描述
+
+给定节点数为 n 二叉树的前序遍历和中序遍历结果，请重建出该二叉树并返回它的头结点。  
+
+例如输入前序遍历序列{1,2,4,7,3,5,6,8}和中序遍历序列{4,7,2,1,5,3,8,6}
+
+# 题解
+
+先根据前序遍历序列的第一个数字创建根结点，接下来在中序遍历序列中找到根结点的位置，这样就能确定左、右子树结点的数量。在前序遍历和中序遍历的序列中划分了左、右子树结点的值之后，就可以递归地去分别构建它的左右子树。
+
+```java
+/**
+ * Definition for binary tree
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+import java.util.Arrays;
+public class Solution {
+    public TreeNode reConstructBinaryTree(int [] pre,int [] in) {
+        if(pre.length==0){
+            return null;
+        }
+        //找出中序遍历序列中根节点的位置
+        TreeNode root = new TreeNode(pre[0]);
+        int temp = 0;
+        for(int i=0;i<in.length;i++){
+            if(in[i]==root.val){
+                temp = i;
+            }
+        }
+        
+        int[] preLeft = Arrays.copyOfRange(pre,1,temp+1);
+        int[] preRight = Arrays.copyOfRange(pre,temp+1,pre.length);
+        int[] inLeft = Arrays.copyOfRange(in,0,temp);
+        int[] inRight = Arrays.copyOfRange(in,temp+1,in.length);
+        root.left = reConstructBinaryTree(preLeft,inLeft);
+        root.right = reConstructBinaryTree(preRight,inRight);
+        return root;
+    }
+}
+```
+
+![image](https://user-images.githubusercontent.com/30036563/136531388-534daf11-a2d4-4fe0-bf65-aaa3a561bcf6.png)
 
