Update and rename JZ84 二叉树中和为某一值的路径(三).md to 84 二叉树中和为某一值的路径(三).md

--- a/java_solution/84 二叉树中和为某一值的路径(三).md
+++ b/java_solution/84 二叉树中和为某一值的路径(三).md
@@ -34,6 +34,7 @@ public class Solution {
         if(null==root) return;
         sum -= root.val;
         if(sum==0) key++;
+        //这里就算sum==0了也不用return,因为节点值有可能是负数，所以后面还有可能得出sum==0
         dfs(root.left,sum);
         dfs(root.right,sum);
     }
